@@ -1,3 +1,11 @@
+2008-06-06  Joseph Myers  <joseph@codesourcery.com>
+
+	* lib/target-supports.exp (check_effective_target_powerpc_spu):
+	Call check_effective_target_powerpc_altivec_ok.
+	* gcc.target/powerpc/dfp-dd.c, gcc.target/powerpc/dfp-td.c,
+	gcc.target/powerpc/ppc32-abi-dfp-1.c,
+	gcc.target/powerpc/ppu-intrinsics.c: Require powerpc_fprs.
+
 2008-06-06  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/36362
